:recycle: FIX: correção inserção evento autenticação
